--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/small-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stagego</title>
+    <meta name="description" content="Compra boletos para tus eventos favoritos - Conciertos, festivales y más en StageGo" />
+    <title>StageGo - Boletos de tus eventos favoritos</title>
   </head>
   <body>
     <div id="root"></div>
